# modern-tlv

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  base_tlv.cpp  base_tlv.hpp  tlv_connection_req.cpp  tlv_connection_req.hpp  tlv_connection_res.cpp  tlv_connection_res.hpp  tlv_manager.cpp  tlv_manager.hpp
test/: CMakeLists.txt  test_base_tlv.cpp
